# cursusx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cursusx.py  pyproject.toml
.github/workflows/: deploy.yml  develop.yml  release.yml
model/cli/command/: CommandModel.py  CommandRepresentation.py  FlagFactory.py  FlagModel.py  OutputModel.py  QueryBuilderModel.py
model/cli/command/http/: Contants.py  HttpCommandModel.py  HttpOutputModel.py
model/endpoint/: EndPointModel.py
model/http/: BodyModel.py  ContentModel.py  EndpointModel.py  HeaderModel.py  HostModel.py  MethodModel.py  RequestBuilderModel.py
model/http/engine/: EngineModel.py  Engines.py  HttpEngineModel.py  StandardEngineModel.py  StandardHttpEngineModel.py
model/http/info/: BodyModel.py  ContentModel.py  EndpointModel.py  HeaderModel.py  IterableContentModel.py  MethodModel.py  ParameterModel.py
model/http/info/body/: BodyModel.py
model/http/info/content/: ContentModel.py  RequestModel.py  (+1 more)
model/message/: Header.py  HeaderMessage.py  HeaderModel.py  ResponseModel.py  StatusCode.py
model/method/: BodyModel.py  ContentModel.py  HeaderModel.py  MethodModel.py
model/parser/: ParserModel.py
model/resources/status_codes/: codes.csv
model/test/http/: TestHeaderModel.py  TestHeadersModel.py
model/test/message/: HeaderMessageTest.py  TestHeaderModel.py  test_header_message.py
model/test/method/: TestHeaderModel.py  TestHeadersModel.py
src/cursusx/: cursusx.py
src/cursusx/wrapper/: CursusxViewerApp.py  ViewCommandFactory.py
test/mock/: ServerMock.py
test/model/parser/: TestParserModel.py
test/util/: BaseServerTestCase.py
tests/mock/: ServerMock.py
tests/model/parser/: TestParserModel.py
tests/util/: BaseServerTestCase.py
view/: CommandWidget.py  CursusxViewApp.py
view/item/: CollapsableMenuItem.py  CustomScrollableContainer.py  DictionaryViewerItem.py  LabelItem.py  StringMenuItem.py  StringViewerItem.py
view/item/http/: HeadersItem.py
wrapper/: CursusxViewerApp.py  ViewCommandFactory.py
wrapper/http/: BodyWrapper.py  EndpointWrapper.py  HeadersWrapper.py  HttpCommandWrapper.py  ParametersWrapper.py  StatusCodeWrapper.py
wrapper/output/http/: BodyWrapper.py  CookiesWrapper.py  EndpointWrapper.py  HeadersWrapper.py  HttpCommandWrapper.py  StatusCodeWrapper.py
(+68 files in other folders)
