[project]
name = "cursusx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "textual>=8.1.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cursusx = "cursusx.cursusx:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "Test*.py"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/cursusx"]