[project]
name = "cursusx"
version = "0.1.6"
description = "CLI Tool for network operation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "textual>=8.1.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project.scripts]
cursusx = "cursusx:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "Test*.py"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.sdist]
include = ["model", "view", "wrapper"]

[tool.hatch.build.targets.wheel.force-include]
"cursusx.py" = "cursusx.py"

[tool.hatch.build.targets.wheel]
packages = ["."]